@@ -5,6 +5,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.1
 
 	- Documentation updates.
+	- The cupstestppd utility now tests the custom page size code
+	  for CUPS raster drivers.
 	- cupsLangDefault() did not attempt to return a language that
 	  was supported by the calling application.
 	- If a remote printer stopped while a job was being sent, the
